# alice-binance

./: Cargo.toml
src/: lib.rs  main.rs
src/alice/: alice.rs  intents.rs  mod.rs  models.rs
src/binance/: api_v3.rs  mod.rs  models.rs
