[package]
name = "alice-binance"
version = "0.1.0"
authors = ["AlexeySadkovich <sadkovich01@mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
actix-web = "3"
actix-rt = "1.0"
reqwest = {version = "0.11.1", default-features = false, features = ["rustls-tls"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
